# StupidOpenGLStuff

./: .gitignore  CMakeLists.txt  TODO.txt
src/: CMakeLists.txt  main.cpp
src/core/: bvh.h  camera.h  game.cpp  game.h  gameObject.cpp  gameObject.h  loader.h  physic.h  scene.h  shape.h
src/lib/: CMakeLists.txt
src/oglutil/: shader.h  texture.h
src/physic/: particlesys.cpp  particlesys.h  physhape.cpp  physhape.h  physic.cpp  physic.h  phyworld.h
src/shaders/: pvertex.glsl  testfragment.glsl  testvertex.glsl
src/utils/: bvh.h  spTree.h
